fixed broken css property of button is-small class

--- a/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
+++ b/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
@@ -12,11 +12,7 @@
   padding: 15px !important;
 }
 
-::ng-deep .button.is-small {
-  font-size: 0.90rem !important;
-}
-
-::ng-deep .input.is-small {
+::ng-deep .button.small-btn {
   font-size: 0.90rem !important;
 }
 
